force-app/main/default/objects/OccupationLamas__c/OccupationLamas__c.object-meta.xml
<CustomObject>
    <label>עיסוק-למ&quot;ס</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>שם עיסוק למ&quot;ס</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>עיסוקים-למ&quot;ס</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>