force-app/main/default/objects/OccupationLamas__c/fields/FieldChangesDescription__c.field-meta.xml
<CustomField>
    <fullName>FieldChangesDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>תיעוד השינויים בנתוני העיסוק</label>
    <type>TextArea</type>
</CustomField>