force-app/main/default/objects/OccupationLamas__c/fields/OccupationIdMatrix__c.field-meta.xml
<CustomField>
    <fullName>OccupationIdMatrix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>קוד עיסוק ראשי בעבודאטה</label>
    <length>10</length>
    <type>Text</type>
</CustomField>