force-app/main/default/objects/OccupationLamas__c/fields/OccupationLamasNameId__c.field-meta.xml
<CustomField>
    <fullName>OccupationLamasNameId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>מזהה למ&quot;ס</label>
    <length>100</length>
    <type>Text</type>
</CustomField>