force-app/main/default/objects/OccupationLamas__c/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>תאריך עדכון</label>
    <type>Date</type>
</CustomField>